Changes in 4.5.0

1)  Allow control over how the Mark is used.