@@ -11,7 +11,9 @@ Shorewall 4.5.0
                     M I G R A T I O N   I S S U E S
 ----------------------------------------------------------------------------
 
-None.
+1)  The deprecated macro invocation form <macro>/<param> (e.g.,
+    Ping/ACCEPT) now causes a compiler warning to be generated. Only
+    the first occurrance is flagged with a warning.
 
 ----------------------------------------------------------------------------
           P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 5
