@@ -1,3 +1,5 @@
 Changes in 4.5.0
 
 1)  Allow control over how the Mark is used.
+
+2)  Generate warning on <macro>/<param>.
